# Esp32MotherClock

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  commandHandler.c  commandHandler.h  component.mk  config.c  config.h  filesystem.c  filesystem.h  main.c  staticHttpServer.c  staticHttpServer.h  websocket.c  websocket.h
main/certs/: .gitignore  README
main/etc/: configMap.json
resources/: index.html  jquery-ui.min.css  jquery-ui.min.js  jquery-ui.structure.min.css  jquery-ui.theme.min.css  main.js  main.part.html  style.css
